# CMakeLists.txt
cmake_minimum_required(VERSION 2.8)

add_executable(rec1 rec1.cpp)
add_executable(rec2 rec2.cpp)
add_executable(hanoi hanoi.cpp)
add_executable(st st.cpp)
add_executable(static static.cpp)
add_executable(dice dice.cpp)
add_executable(pow pow.cpp)
add_executable(compute compute.cpp)
add_executable(enum enum.cpp)
