# CMakeLists.txt
cmake_minimum_required(VERSION 2.8)

add_executable(static_member1 static_member1.cpp)
add_executable(inline inline.cpp)
add_executable(static_member2 static_member2.cpp)
add_executable(static_data static_data.cpp)
add_executable(swap swap.cpp)
add_executable(poolPrice poolPrice.cpp)
