# CMakeLists.txt
cmake_minimum_required(VERSION 2.8)

add_executable(assignmentOP assignmentOP.cpp)
add_executable(streamOP streamOP.cpp)
add_executable(funcOP funcOP.cpp)
add_executable(increment_and_decrement increment_and_decrement.cpp)
add_executable(binaryOP binaryOP.cpp)
add_executable(compareOP compareOP.cpp)
add_executable(parenthesesOP parenthesesOP.cpp)
add_executable(salaryManager salaryManager.cpp)
